# llm-psych

./: .env.example  .gitignore  BLUEPRINT.md  CLAUDE.md  HYPOTHESES.md  HYPOTHESES_original.md  README.md  RESEARCH_LOG.md  pyproject.toml
configs/: config.yaml
configs/derivation/: caa.yaml  story.yaml
configs/emotion/: EMOTION_LABELS.md  admiration.yaml  afraid.yaml  anger.yaml  blissful.yaml  calm.yaml  compassionate.yaml  contempt.yaml  desperate.yaml  disgust.yaml  fear.yaml  hostile.yaml  joy.yaml  joyful.yaml  loathing.yaml  neutral.yaml  offended.yaml  peaceful.yaml  powerful.yaml  sadness.yaml  surprise.yaml  upset.yaml
configs/model/: gemma2_2b.yaml  gemma2_9b.yaml  gemma3_4b.yaml  llama31_8b.yaml  llama32_1b.yaml  qwen25_05b.yaml  qwen25_7b.yaml
data/public/: blackmail_scenarios.jsonl  emotion_prompts.parquet  emotion_prompts_augmented.parquet  reward_hacking_scenarios.jsonl  story_topics.txt
docs/: cloud_runbook.md  methods.md  methods_original.md
plans/: derivation-primacy-decision.md  next-steps.md  numerical-intensity-control.md  story-gate-run.md
scripts/: audit_h1_confounds.py  augment_emotion_prompts.py  build_emotion_prompts.py  cloud_bootstrap.sh  cloud_run.sh  derive_story_steering_vectors.py  extract_activations.py  extract_layers_story_generation.py  extract_story_activations.py  generate_emotion_stories.py  pin_hf_revisions.py  push_stories.py  run_smoketest_qwen05b.sh  run_smoketest_story_qwen05b.sh  run_story_pipeline.sh  sync_hf.py  train_probes.py  validate_with_emotionscope.py
src/: simple_probe.py
src/llm_psych/: __init__.py  hf_sync.py  hooks.py  models.py  probes.py  simple_probe.py  steering.py
tests/: test_hf_sync.py  test_hooks.py  test_probes.py  test_steering.py
