[project]
name = "llm-psych"
version = "0.1.0"
description = "Emotion Concepts in Open-Weight LLMs — replication of Sofroniew et al. (2026)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Haydar Ali Şeker" }]
license = { text = "MIT" }
classifiers = [
    "Private :: Do Not Upload",  # safeguard against accidental PyPI publish
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # ML core
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "accelerate>=1.1.0",
    "safetensors>=0.4.5",
    "huggingface-hub>=0.26.0",
    "datasets>=3.1.0",
    # 4-bit quantization — Linux/CUDA only; uv skips on macOS
    "bitsandbytes>=0.44.0; platform_system == 'Linux'",

    # Stats & analysis
    "numpy>=1.26,<3.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",

    # Plotting
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Data formats
    "pyarrow>=18.0.0",

    # Config & orchestration
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",

    # API access (judge models, optional analysis)
    "openai>=1.55.0",
    "anthropic>=0.40.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "joblib>=1.4.2",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "jupytext>=1.16.0",
    "ipykernel>=6.29.0",
]

# ---- uv: pin torch to a CUDA 12.x wheel on Linux ---------------------------
# Default PyPI torch on Linux now resolves to a cu13 build, which needs a very
# new NVIDIA driver; RunPod / most cloud 4090 hosts ship CUDA 12.6 drivers, so
# torch then reports no CUDA device. Pin Linux torch to the cu124 index (runs
# on any >=12.4 driver). macOS is left on default PyPI (MPS/CPU build) via the
# platform marker, so the Mac dev fleet is unaffected. After editing this,
# regenerate the lock:  uv lock
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux'" }]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_psych"]

# ---- Tooling ----------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "NPY",  # numpy-specific
]
ignore = [
    "E501",  # line length — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]  # imports after sys.path tweaks are common in scripts
"tests/*" = ["S101"]    # asserts are fine in tests
# X / X_train / C follow sklearn matrix naming; N802 for test names like test_default_C_is_1
"src/llm_psych/probes.py" = ["N803"]
"tests/test_probes.py" = ["N802", "N806"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: tests that load models or run inference (skip on Mac dev)",
    "gpu: tests requiring CUDA",
]
